--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lotto and Lucky Day Lotto</title>
-	<link rel="stylesheet" target="styles.css">
+	<link rel="stylesheet" href="styles.css">
 	<script type="text/javascript" src="lottoGame.js"></script>
 	<script>
 		let luckyDayLotto1 = new LottoDraw(45, 5, "lucky");
