--- a/index.html
+++ b/index.html
@@ -5,19 +5,8 @@
 	<title>Lotto and Lucky Day Lotto</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-	
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
 	<link rel="stylesheet" href="styles.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
 	<script type="text/javascript" src="lottoGame.js"></script>
 	<script>
 		let luckyDayLotto1 = new LottoDraw(45, 5, "lucky");
@@ -58,7 +47,7 @@
 				<p></p>
 				<p id="luckySize"></p>
 			</div>
-			<footer class="btn btn-play" type="button" onclick="luckyDayLotto1.playLucky();">Retry</footer>
+			<footer class="btn btn-play" onclick="luckyDayLotto1.playLucky();">Retry</footer>
 		</div>
 		<div class="col-md-1"></div>
 		<div class="col-md-5 card card-decor">
@@ -67,7 +56,7 @@
 				<p class="card-text" ></p>
 				<p class="card-text" id="lottoSize"></p>
 			</div>
-			<footer class="btn btn-play" type="button" onclick="illinoisLotto.playLotto();">Retry</footer>
+			<footer class="btn btn-play" onclick="illinoisLotto.playLotto();">Retry</footer>
 		</div>
 	</section>
 </main>
@@ -77,6 +66,17 @@
 	luckyDayLotto1.playLucky();
 	illinoisLotto.playLotto();
 </script>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
+
 
 </body>
 </html>
